fix: disable dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,13 +13,6 @@
   --font-serif: var(--font-libre-baskerville), Georgia, serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #302d2d;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
